modified some sdk scripts to run from anywhere and without gradle; DMA allocator worked; removed old C++ libraries; now vendor xsi.h (no more compile time dependency on vivado, just runtime)